# termBreaker

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  build_examples.sh  index.html
.github/workflows/: ci.yml  codeql-analysis.yml
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_test.cpp
resources/: termBreaker
snap/: snapcraft.yaml
src/: CMakeLists.txt  ball.cpp  ball.hpp  board.cpp  board.hpp  brick.cpp  brick.hpp  contact_listener.cpp  contact_listener.hpp  game.cpp  game.hpp  intro.cpp  intro.hpp  logo.cpp  logo.hpp  lose.cpp  main.cpp  main_menu.cpp  resources.cpp  resources.hpp  win.cpp
test/: CMakeLists.txt  game_unittests.cpp  intro_unittests.cpp  lose_unittests.cpp  main_menu_unittests.cpp  win_unittests.cpp
tools/: format.sh
